[gd_scene load_steps=3 format=3 uid="uid://5773si1b0o5"]

[ext_resource type="Script" uid="uid://drmlk5c4a6soc" path="res://visual_novel_component/visual_novel_choices_ui.gd" id="1_ounns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4h4a"]
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.0507813, 0.0390778, 0.0390778, 0.585)
shadow_color = Color(0.101563, 0.0714111, 0.0714111, 0.6)
shadow_size = 8
shadow_offset = Vector2(5, 5)

[node name="VN_Component_ChoicesUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ounns")

[node name="ChoicesUI_CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Vbox_ChoicesContainer" type="VBoxContainer" parent="ChoicesUI_CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_right = 382.0
grow_horizontal = 2
grow_vertical = 2

[node name="button_template" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -26.5
offset_right = 378.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_j4h4a")
text = "Choice Button
"

[connection signal="pressed" from="button_template" to="." method="_on_button_template_pressed"]
